Fixing z-index level preventing button from being clickable (#759)

--- a/apps/recent-activity/src/base-scss/mat-ui-overrides.scss
+++ b/apps/recent-activity/src/base-scss/mat-ui-overrides.scss
@@ -816,6 +816,7 @@ apx-chart .apexcharts-toolbar {
         }
         .description {
           justify-content: flex-start;
+          z-index: 1;
         }
       }
 
